<resources>
    <string name="app_name">DarTask2StudentList</string>
    <string name="total_number_of_students">Total number of students:</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="add">Add</string>
    <string name="next_page">Next Page</string>
    <string name="student_1">Student 1</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
</resources>