<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/total_number_of_students"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="54" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/enter_name"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentCount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_surname"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/surnameTextInputLayout"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/surnameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/surnameTextInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="@+id/surnameTextInputLayout"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>